[workspace]
resolver = "2"
members = [
    "kits/bottlerocket-kernel-kit",
    "packages/grub",
    "packages/kernel-6.1",
    "packages/kernel-6.12",
    "packages/kmod-6.1-efa",
    "packages/kmod-6.1-nvidia-r570",
    "packages/kmod-6.1-nvidia-r580",
    "packages/kmod-6.12-amdgpu",
    "packages/kmod-6.12-efa",
    "packages/kmod-6.12-nvidia-r570",
    "packages/kmod-6.12-nvidia-r580",
    "packages/nvidia-migmanager",
    "packages/nvlsm",
    "packages/linux-firmware",
    "packages/microcode",
    "packages/libkcapi",
    "packages/shim",
]
exclude = ["sources"]
