[package]
name = "bottlerocket-kernel-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"

[package.metadata.build-kit]
vendor = "bottlerocket"

[lib]
path = "../kit.rs"

[build-dependencies]
grub = { path = "../../packages/grub" }
kernel-5_15 = { path = "../../packages/kernel-5.15" }
kernel-6_1 = { path = "../../packages/kernel-6.1" }
kernel-6_12 = { path = "../../packages/kernel-6.12" }
kmod-5_15-nvidia = { path = "../../packages/kmod-5.15-nvidia" }
kmod-6_1-nvidia = { path = "../../packages/kmod-6.1-nvidia" }
kmod-6_1-nvidia-r570 = { path = "../../packages/kmod-6.1-nvidia-r570" }
kmod-6_12-nvidia-r570 = { path = "../../packages/kmod-6.12-nvidia-r570" }
nvidia-migmanager = { path = "../../packages/nvidia-migmanager" }
nvlsm = { path = "../../packages/nvlsm" }
linux-firmware = { path = "../../packages/linux-firmware" }
microcode = { path = "../../packages/microcode" }
libkcapi = { path = "../../packages/libkcapi" }
shim = { path = "../../packages/shim" }

