[package]
name = "bottlerocket-kernel-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"

[package.metadata.build-kit]
vendor = "bottlerocket"

[lib]
path = "../kit.rs"

[build-dependencies]
grub = { path = "../../packages/grub" }
kernel-6_1 = { path = "../../packages/kernel-6.1" }
kernel-6_12 = { path = "../../packages/kernel-6.12" }
kmod-6_1-efa = { path = "../../packages/kmod-6.1-efa" }
kmod-6_1-nvidia-r570 = { path = "../../packages/kmod-6.1-nvidia-r570" }
kmod-6_1-nvidia-r580 = { path = "../../packages/kmod-6.1-nvidia-r580" }
kmod-6_12-amdgpu = { path = "../../packages/kmod-6.12-amdgpu" }
kmod-6_12-efa = { path = "../../packages/kmod-6.12-efa" }
kmod-6_12-nvidia-r570 = { path = "../../packages/kmod-6.12-nvidia-r570" }
kmod-6_12-nvidia-r580 = { path = "../../packages/kmod-6.12-nvidia-r580" }
nvidia-migmanager = { path = "../../packages/nvidia-migmanager" }
nvlsm = { path = "../../packages/nvlsm" }
linux-firmware = { path = "../../packages/linux-firmware" }
microcode = { path = "../../packages/microcode" }
libkcapi = { path = "../../packages/libkcapi" }
shim = { path = "../../packages/shim" }

